--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,3 +4,7 @@ spring:
       resourceserver:
         jwt:
           issuer-uri: "http://localhost:8088/realms/master"
+
+
+proxy:
+  echo-host: "http://localhost:9090"
