--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,8 +3,10 @@ spring:
     oauth2:
       resourceserver:
         jwt:
-          issuer-uri: "http://localhost:8088/realms/master"
+          issuer-uri: "http://localhost:8080/realms/master"
 
+server:
+  port: 8081
 
 proxy:
   echo-host: "http://localhost:9090"
